--- a/Projects/Certification Project 1 - Survey Form/index.html
+++ b/Projects/Certification Project 1 - Survey Form/index.html
@@ -21,57 +21,69 @@
       </fieldset>
 
       <fieldset>
-        <p>Would you consider yourself as a dog person?</p>
-        <label for="dog-person-yes"><input id="dog-person-yes" type="radio" name="dog-person" class="inline" /> Yes</label>
-        <label for="dog-person-no"><input id="dog-person-no" type="radio" name="dog-person" class="inline" /> No</label>
+        <div class="centerRadio">
+          <p>Would you consider yourself as a dog person?</p>
+          <input id="dog-person-yes" type="radio" name="dog-person" class="emojiButton"/>
+          <label for="dog-person-yes" class="emojiLabel"><img src="Resources/dogHappy.png" alt="Happy dog emoji" height="50px" width="50px" class="imgGlow"> Yes</label>
+          <input id="dog-person-no" type="radio" name="dog-person" class="emojiButton"/>
+          <label for="dog-person-no" class="emojiLabel"><img src="Resources/dogSad.png" alt="Sad dog emoji" height="50px" width="50px" class="imgGlow">No</label>
 
-        <div class="hidden">
-          <p>How much do you like dogs on a scale of 1 to 10?</p>
-          <label for="dog-rating">
-            <input id="dog-rating-1" type="radio" name="dog-rating" class="inline" /> 1
-            <input id="dog-rating-2" type="radio" name="dog-rating" class="inline" /> 2
-            <input id="dog-rating-3" type="radio" name="dog-rating" class="inline" /> 3
-            <input id="dog-rating-4" type="radio" name="dog-rating" class="inline" /> 4
-            <input id="dog-rating-5" type="radio" name="dog-rating" class="inline" /> 5
-            <input id="dog-rating-6" type="radio" name="dog-rating" class="inline" /> 6
-            <input id="dog-rating-7" type="radio" name="dog-rating" class="inline" /> 7
-            <input id="dog-rating-8" type="radio" name="dog-rating" class="inline" /> 8
-            <input id="dog-rating-9" type="radio" name="dog-rating" class="inline" /> 9
-            <input id="dog-rating-10" type="radio" name="dog-rating" class="inline" /> 10
-        </label>
+          <div id="hidden-dog-rating" class="hiddenDogRaiting">
+            <p>How much do you like dogs on a scale of 1 to 10?</p>
+            <label for="dog-rating">
+              <label><input id="dog-rating-1" type="radio" name="dog-rating" class="underLabel" />1</label>
+              <label><input id="dog-rating-2" type="radio" name="dog-rating" class="underLabel" />2</label>
+              <label><input id="dog-rating-3" type="radio" name="dog-rating" class="underLabel" />3</label>
+              <label><input id="dog-rating-4" type="radio" name="dog-rating" class="underLabel" />4</label>
+              <label><input id="dog-rating-5" type="radio" name="dog-rating" class="underLabel" />5</label>
+              <label><input id="dog-rating-6" type="radio" name="dog-rating" class="underLabel" />6</label>
+              <label><input id="dog-rating-7" type="radio" name="dog-rating" class="underLabel" />7</label>
+              <label><input id="dog-rating-8" type="radio" name="dog-rating" class="underLabel" />8</label>
+              <label><input id="dog-rating-9" type="radio" name="dog-rating" class="underLabel" />9</label>
+              <label><input id="dog-rating-10" type="radio" name="dog-rating" class="underLabel" />10</label>
+          </label>
+          </div>
+
+          <hr class="questions">
+
+          <p>Would you consider yourself as a cat person?</p>
+          <input id="cat-person-yes" type="radio" name="cat-person" class="emojiButton"/>
+          <label for="cat-person-yes" class="emojiLabel"><img src="Resources/catHappy.png" alt="Happy cat emoji" height="50px" width="50px" class="imgGlow">Yes</label>
+          <input id="cat-person-no" type="radio" name="cat-person" class="emojiButton"/>
+          <label for="cat-person-no" class="emojiLabel"><img src="Resources/catSad.png" alt="Sad cat emoji" height="50px" width="50px" class="imgGlow">No</label>
+
+          <div id="hidden-cat-rating" class="hiddenCatRaiting">
+            <p>How much do you like cats on a scale of 1 to 10?</p>
+            <label for="cat-rating">
+              <label><input id="cat-rating-1" type="radio" name="cat-rating" class="underLabel" />1</label>
+              <label><input id="cat-rating-2" type="radio" name="cat-rating" class="underLabel" />2</label>
+              <label><input id="cat-rating-3" type="radio" name="cat-rating" class="underLabel" />3</label>
+              <label><input id="cat-rating-4" type="radio" name="cat-rating" class="underLabel" />4</label>
+              <label><input id="cat-rating-5" type="radio" name="cat-rating" class="underLabel" />5</label>
+              <label><input id="cat-rating-6" type="radio" name="cat-rating" class="underLabel" />6</label>
+              <label><input id="cat-rating-7" type="radio" name="cat-rating" class="underLabel" />7</label>
+              <label><input id="cat-rating-8" type="radio" name="cat-rating" class="underLabel" />8</label>
+              <label><input id="cat-rating-9" type="radio" name="cat-rating" class="underLabel" />9</label>
+              <label><input id="cat-rating-10" type="radio" name="cat-rating" class="underLabel" />10</label>
+          </label>
+          </div>
+
+          <hr class="questions">
+
+          <p>Are there any other animals that you like?</p>
+          <input id="other-animals-yes" type="radio" name="other-animals" class="emojiButton"/>
+          <label for="other-animals-yes" class="emojiLabel"><img src="Resources/bearHappy.png" alt="Happy bear emoji" height="50px" width="50px" class="imgGlow">Yes</label>
+          <input id="other-animals-no" type="radio" name="other-animals" class="emojiButton"/>
+          <label for="other-animals-no" class="emojiLabel"><img src="Resources/bearSad.png" alt="Sad bear emoji" height="50px" width="50px" class="imgGlow">No</label>
+
+
+          <div id="hidden-other-animals-box" class="hiddenOtherAnimals">
+            <label for="other-animals-box" class="other-animals-box">Write down whatever other animals you like:</label>
+            <input id="other-animals-box" type="text" name="other-animals"/>
+          </div>
+
         </div>
 
-        <p>Would you consider yourself as a cat person?</p>
-        <label for="cat-person-yes"><input id="cat-person-yes" type="radio" name="cat-person" class="inline" /> Yes</label>
-        <label for="cat-person-no"><input id="cat-person-no" type="radio" name="cat-person" class="inline" /> No</label>
-
-        <div class="hidden">
-          <p>How much do you like cats on a scale of 1 to 10?</p>
-          <label for="cat-rating">
-            <input id="cat-rating-1" type="radio" name="cat-rating" class="inline" /> 1
-            <input id="cat-rating-2" type="radio" name="cat-rating" class="inline" /> 2
-            <input id="cat-rating-3" type="radio" name="cat-rating" class="inline" /> 3
-            <input id="cat-rating-4" type="radio" name="cat-rating" class="inline" /> 4
-            <input id="cat-rating-5" type="radio" name="cat-rating" class="inline" /> 5
-            <input id="cat-rating-6" type="radio" name="cat-rating" class="inline" /> 6
-            <input id="cat-rating-7" type="radio" name="cat-rating" class="inline" /> 7
-            <input id="cat-rating-8" type="radio" name="cat-rating" class="inline" /> 8
-            <input id="cat-rating-9" type="radio" name="cat-rating" class="inline" /> 9
-            <input id="cat-rating-10" type="radio" name="cat-rating" class="inline" /> 10
-        </label>
-        </div>
-
-        <p>Are there any other animals that you like?</p>
-        <label for="other-animals-yes"><input id="other-animals-yes" type="radio" name="other-animals" class="inline" /> Yes</label>
-        <label for="other-animals-no"><input id="other-animals-no" type="radio" name="other-animals" class="inline" /> No</label>
-
-        <div class="hidden">
-          <label for="other-animals">Write down whatever other animals you like: <input id="other-animals" type="text" name="other-animals"/></label>
-        </div>
-
-        <label for="terms-and-conditions" name="terms-and-conditions">
-          <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" class="inline" /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
-        </label>
       </fieldset>
 
       <fieldset>
@@ -93,6 +105,10 @@
         </label>
 
       </fieldset>
+      <label for="terms-and-conditions" name="terms-and-conditions">
+        <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions"  /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+      </label>
+      <br>
       <input type="submit" value="Submit" />
     </form>
 
