--- a/Projects/Certification Project 1 - Survey Form/index.html
+++ b/Projects/Certification Project 1 - Survey Form/index.html
@@ -9,8 +9,14 @@
 
   <body>
 
-    <h1>Puppy Survey Form</h1>
-    <p>Thank you for helping in this research</p>
+    <div class="titleBox">
+      <h1>Puppy Survey Form</h1>
+      <div class="subTitleBox">
+        <img src="Resources/puppyTitle.png" alt="Puppy emoji used in title - left" height="50px" width="50px">
+        <p>Thank you for helping in this research</p>
+        <img src="Resources/puppyTitle.png" alt="Puppy emoji used in title - right" height="50px" width="50px">
+      </div>
+    </div>
 
     <form method="post" action='#'>
       <fieldset>
