--- a/Projects/Certification Project 1 - Survey Form/index.html
+++ b/Projects/Certification Project 1 - Survey Form/index.html
@@ -384,6 +384,10 @@
           </div>
         </fieldset>
 
+        <fieldset>
+          <h2><a href="credits.html">Attributes, credits and licenses</a></h2>
+        </fieldset>
+
       </form>
     </div>
 
