Uploaded lesson 8 files

--- a/Lessons/Lesson 8 - Building a Quiz/index.html
+++ b/Lessons/Lesson 8 - Building a Quiz/index.html
@@ -16,6 +16,7 @@
           <li><a href="#student-info" accesskey="a">INFO</a></li>
           <li><a href="#html-questions" accesskey="s">HTML</a></li>
           <li><a href="#css-questions" accesskey="d">CSS</a></li>
+		  <!-- accesskeys allows the user quick access by pressing "Alt" + *the provided accesskey*, so Alt+a will open / go to the #student-info section -->
         </ul>
       </nav>
     </header>
