--- a/Lessons/Lesson 9 - Balance Sheet/index.html
+++ b/Lessons/Lesson 9 - Balance Sheet/index.html
@@ -7,5 +7,13 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
+    <main>
+      <section>
+        <h1>
+          <span>
+          </span>
+        </h1>
+      </section>
+    </main>
   </body>
 </html>
