Uploaded lesson 9 (part 3) files

--- a/Lessons/Lesson 9 - Balance Sheet/index.html
+++ b/Lessons/Lesson 9 - Balance Sheet/index.html
@@ -10,9 +10,12 @@
     <main>
       <section>
         <h1>
-          <span>
+          <span class="flex">
+            <span>AcmeWidgetCorp</span>
+            <span>Balance Sheet</span>
           </span>
         </h1>
+
       </section>
     </main>
   </body>
