--- a/Projects/Certification Project 2 - Tribute Page/index.html
+++ b/Projects/Certification Project 2 - Tribute Page/index.html
@@ -5,10 +5,43 @@
     <meta charset="UTF-8">
     <title>Nathan Sharp Tribute Page</title>
     <link rel="stylesheet" href="css/styles.css"/>
-    <link rel="icon" href="assets/favicon.jpg">
+    <link rel="icon" href="assets/favicon.png">
   </head>
 
   <body>
+    <main id="main">
+      <h1 id="title">Nathan Sharp</h1>
+      <figure id="imgDiv">
+        <img id="image" src="assets/titleImg.jpg" alt="A screenshot of Nate from his music video Phantom" class="titleImg"/>
+        <figcaption id="imgCaption"> NateWantsToBattle - image captured from his music video <a href="https://www.youtube.com/watch?v=r24PhMkXlsM">Phantom</a> </figcaption>
 
+        <hr class="split">
+
+        <section id="shortDescription">
+          <p id="headline">Nathan Sharp, also known as NateWantsToBattle, is an American voice actor, musician and gaming commentator. Best known for his gaming and anime music videos, from popular songs about video games to unique covers of existing songs, to performing anime openings in English. He has also released several original albums, the most notable being "Sandcastle Kingdoms," released in March of 2017.</p>
+        </section>
+
+        <hr class="split">
+
+        <section id="tributeInfo">
+          <h3 id="headline">Here's a list of multimedia content that he was a part of as a voice actor:</h3>
+          <ul>
+            <li><strong>2008</strong> - Sukippu bîto! as Imai</li>
+            <li><strong>2010</strong> - The Party Record as Hutch</li>
+            <li><strong>2011</strong> - Rio: Rainbow Gate as an additional voice</li>
+          </ul>
+
+
+
+
+          <blockquote cite="#">
+            <p> "Quote"</p>
+          <cite>-- by who</cite>
+          </blockquote>
+        
+          <h3> If you have time, you should read more about this incredible artist on his <a id="tributeLink" href="https://www.imdb.com/name/nm3827338/" target="_blank">IMDB page</a>.</h3>
+
+        </section>
+    </main>
   </body>
 </html>
