--- a/Projects/Certification Project 2 - Tribute Page/index.html
+++ b/Projects/Certification Project 2 - Tribute Page/index.html
@@ -21,21 +21,18 @@
           <p id="headline">Nathan Sharp, also known as NateWantsToBattle, is an American voice actor, musician and gaming commentator. Best known for his gaming and anime music videos, from popular songs about video games to unique covers of existing songs, to performing anime openings in English. He has also released several original albums, the most notable being "Sandcastle Kingdoms," released in March of 2017.</p>
         </section>
 
-        <hr class="split">
 
         <section id="tributeInfo">
 
           <section id="musicalContent">
-            <h3 id="headline">Here's a list of songs he's created:</h3>
+            <h3 id="headline" class="lineHr">Here's a list of songs he's created</h3>
             <ul class="mcData">
                 <li> <strong>2015 <a href="https://open.spotify.com/album/4Ptx0OQ3pjBa8Up5sxTcgQ">(Spotify)</a></strong> ~ <a href="#!" class="albumData">Mangled</a> </li>
             </ul>
           </section>
 
-          <hr class="split">
-
           <section id="musicalContent">
-            <h3 id="headline">Here's a list of albums he's created:</h3>
+            <h3 id="headline" class="lineHr">Here's a list of albums he's created</h3>
             <ul class="mcData">
                 <li>
                   <strong>2015 <a href="https://open.spotify.com/album/4Ptx0OQ3pjBa8Up5sxTcgQ">(Spotify)</a></strong> ~ <a href="#!" class="albumData">Mangled</a>
@@ -449,10 +446,8 @@
             </ul>
           </section>
 
-          <hr class="split">
-
           <section id="voiceActingContent">
-            <h3 id="headline">Here's a list of multimedia content that he was a part of as a voice actor:</h3>
+            <h3 id="headline" class="lineHr">Here's a list of multimedia content that he was a part of as a voice actor</h3>
             <ul class="vacData">
                 <li>
                     <strong>2008 <a href="https://www.imdb.com/title/tt1329466/">(IMBD)</a></strong> ~ <a href="#!" class="titleData">Sukippu bîto!</a> as <a href="#!" class="vaData">Imai</a>
